--- a/index.html
+++ b/index.html
@@ -5,21 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="containerMain">
-        <div id="searchContainer">
-            <div>
-                <input id="search" type="text">
-                <button id="sendSearch">Send</button>
+    <div class="endGame"></div>
+    <div style="position: absolute; color: white;">V0.0.1</div>
+    <div class="grid">
+        <div class="searchItemContainer">
+            <div class="searchItemInfoContainer">
+                <div class="searchItemName">
+                    <h2 id="SIN">
+                    </h2>
+                </div>
+                <div class="flexrow NiveautypeContainer">
+                    <div class="searchItemNiveauContainer">
+                        <h2>
+                            Niveau
+                        </h2>
+                        <h2 class="searchItemNiveau">
+                        </h2>
+                    </div>
+                    <div class="searchItemTypeContainer">
+                        <h2>
+                            Type
+                        </h2>
+                        <h2 class="searchItemType">
+                        </h2>
+                    </div>
+                </div>
             </div>
-            <div id="sugest"></div>
+            <div class="searchItemImgContainer">
+                <img class="searchItemImg" src="" alt="ItemSearchImage">
+            </div>
+            <div class="searchItemElements">
+
+            </div>
+        </div>
+        <div class="searchZone">
+            <h1 class="title">DofusDle</h1>
+            <div class="eventZone">
+                <div class="searchbarContainer">
+                    <input class="searchbar" type="text" placeholder="Search">
+                    <img class="searchbarImg" src="https://upload.wikimedia.org/wikipedia/fr/a/a3/Dofus_emeraude.png"
+                        alt="">
+                </div>
+                <div>
+                    <div class="suggestionContainer">
+                    </div>
+                </div>
+            </div>
+            <div class="tryContainer">
+
+            </div>
         </div>
     </div>
 </body>
-<script src="index.js"></script>
+<script src="maquette.js"></script>
 
 </html>
