--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/style.css">
-    <title>DofousDle Alpha</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DofousDle</title>
 </head>
 
 <body>
@@ -16,6 +14,5 @@
   </div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
-<script src="src/module/index.js"></script>
 
 </html>
